--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #262626;
+  color: #b8b8b8;
+}
 
+div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
+
+img {
+  width: 200px;
+}
